app2/sidecar-envoy.json
{
  "admin": {
    "access_log_path": "/tmp/admin_access.log",
    "address": {
      "socket_address": {
        "address": "127.0.0.1",
        "port_value": 9901
      }
    }
  },
  "tracing": {
    "http": {
      "name": "envoy.zipkin",
      "config": {
        "collector_cluster": "zipkin",
        "collector_endpoint": "/api/v1/spans"
      }
    }
  },
  "static_resources": {
    "listeners": [
      {
        "name": "http_listener",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 80
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "stat_prefix": "ingress_http",
                  "codec_type": "AUTO",
                  "generate_request_id": true,
                  "tracing": {
                    "operation_name": "egress"
                  },
                  "route_config": {
                    "name": "local_route",
                    "virtual_hosts": [
                      {
                        "name": "app1_http",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "local_service"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.router"
                    }
                  ]
                }
              }
            ]
          }
        ]
      },
      {
        "name": "grpc_listener",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 50062
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "stat_prefix": "ingress_http",
                  "generate_request_id": false,
                  "codec_type": "AUTO",
                  "tracing": {
                    "operation_name": "egress"
                  },
                  "route_config": {
                    "name": "local_grpc",
                    "virtual_hosts": [
                      {
                        "name": "app2_grpc",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "local_grpc"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.router"
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "local_service",
        "connect_timeout": "0.25s",
        "type": "strict_dns",
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 4568
            }
          }
        ]
      },
      {
        "name": "local_grpc",
        "connect_timeout": "0.25s",
        "type": "strict_dns",
        "lb_policy": "ROUND_ROBIN",
        "http2_protocol_options": {},
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 50061
            }
          }
        ]
      },
      {
        "name": "zipkin",
        "connect_timeout": "0.25s",
        "type": "strict_dns",
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "zipkin",
              "port_value": 9411
            }
          }
        ]
      }
    ]
  }
}
